# DOTS_assignment

./: .gitignore  :w  CMakeLists.txt  compile.sh  documentation.md  notes.md  run.sh
DotEngine/: AABB.h  Debug.cpp  Debug.h  Dot.cpp  Dot.h  DotRenderer.cpp  DotRenderer.h  DotSettings.cpp  DotSettings.h  Dots.cpp  Dots.h  FrameTime.h  Game.cpp  Game.h  QuadTree.cpp  QuadTree.h  Settings.h  SimpleProfiler.h  SpatialGrid.h  ThreadPool.cpp  ThreadPool.h  UniformEntityGrid.cpp  UniformEntityGrid.h  main.cpp  outTxt.sh  output.txt
